--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ header ul li a.active {
 .dropdown {
     background: white;
     display: none;
-    padding: 10px 20px;
+    padding: 10px 0;
     position: absolute;
     top: 60px;
     left: 50%;
@@ -67,10 +67,11 @@ header ul li a.active {
     display: block;
 }
 
-.dropdown li a {
+.right-header .dropdown li a {
+    display: block;
+    padding: 10px 20px;
     line-height: 1;
     height: auto;
-    padding: 10px 0;
 }
 
 .left-header {
